--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/larger.css">
 </head>
 
-<body>
+<body id="contact">
     <header>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
         <button class="menu" aria-label="Menu"></button>
@@ -24,12 +24,12 @@
         </nav>
     </header>
     <main>
-        <form id="contact" method="get" action="thank-you.html">
+        <form id="contact-us" method="get" action="thank-you.html">
             <fieldset id="user-info">
                 <legend>Contact Us</legend>
-                <label for="name">Name</label><br>
-                <input type="text" id="fname" name="fname" required><br>
-                <label for="email">Email</label><br>
+                <label for="name">Name</label>
+                <input type="text" id="fname" name="fname" required>
+                <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="youremail@gmail.com" required><br>
                 <label>Comment<br>
                     <textarea id="comments" name="comments"></textarea>
