Adding styling to all pages in all views

--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/larger.css">
 </head>
 
-<body id="contact">
+<body>
     <header>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
         <button class="menu" aria-label="Menu"></button>
@@ -23,7 +23,7 @@
             <a href="#">Contact</a>
         </nav>
     </header>
-    <main>
+    <main id="contact">
         <form id="contact-us" method="get" action="thank-you.html">
             <fieldset id="user-info">
                 <legend>Contact Us</legend>
