--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/larger.css">
 </head>
 
-<body id="rentals">
+<body>
     <header>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
         <button class="menu" aria-label="Menu"></button>
@@ -23,8 +23,9 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <main>
+    <main id="rentals">
         <table>
+            <caption>Table 1: Prices with a Reservation</caption>
             <thead>
                 <tr>
                     <th colspan="4">With Reservation</th>
@@ -39,6 +40,7 @@
             <tbody></tbody>
         </table>
         <table>
+            <caption>Table 2: Prices without a Reservation</caption>
             <thead>
                 <tr>
                     <th colspan="4">Walk-In</th>
