--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/larger.css">
 </head>
 
-<body id="reservations">
+<body>
     <header>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
         <button class="menu" aria-label="Menu"></button>
@@ -24,7 +24,7 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <main>
+    <main id="reservations">
         <h2>Rental Services and Agreements</h2>
         <ul>
             <li>A $50 security deposit is required to confirm reservations.</li>
