Added more styling to home page in large view

--- a/scoots/index.html
+++ b/scoots/index.html
@@ -37,29 +37,37 @@
             <a id="action" class="hero-button" href="reservations.html">Make a Reservation</a>
         </div>
         <div class="main-content">
-            <h2>Make the Most of Cozumel</h2>
-            <p>Let Scoots enhance your Cozumel experience with our reliable and diverse rental options. Embrace the
-                island's
-                beauty and create unforgettable memories with ease. Reserve your vehicle today and embark on your
-                perfect
-                adventure.</p>
-            <h2>Rental Options for Every Adventure</h2>
-            <h3>Honda Motor Scooters:</h3>
-            <p>Choose from our range of scooters for solo or two-person rides, perfect for exploring the island.</p>
-            <h3>Side-by-Side ATVs:</h3>
-            <p>Great for adventurous groups, our ATVs are built for rugged trails and exciting off-road experiences.</p>
-            <h3>Jeeps:</h3>
-            <p>Enjoy a comfortable drive with our versatile Jeeps, available in both enclosed and open-air options.</p>
-            <h2>Convenient Vehicle Delivery</h2>
-            <p>To make your experience even easier, we provide free delivery to your Cozumel hotel or rental property
-                for
-                bookings of two days or more. We’ll deliver your vehicle right to you, letting you start your adventure
-                with
-                ease.</p>
-            <h2>Easy Payment Options</h2>
-            <p>Booking is simple with our range of payment options including Google Pay, Apple Pay, cash, credit, debit,
-                and
-                Venmo. Choose the method that works best for you and enjoy a smooth transaction.</p>
+            <div class="left-content">
+                <h2>Make the Most of Cozumel</h2>
+                <p>Let Scoots enhance your Cozumel experience with our reliable and diverse rental options. Embrace the
+                    island's
+                    beauty and create unforgettable memories with ease. Reserve your vehicle today and embark on your
+                    perfect
+                    adventure.</p>
+                <h2>Convenient Vehicle Delivery</h2>
+                <p>To make your experience even easier, we provide free delivery to your Cozumel hotel or rental
+                    property
+                    for
+                    bookings of two days or more. We’ll deliver your vehicle right to you, letting you start your
+                    adventure
+                    with
+                    ease.</p>
+                <h2>Easy Payment Options</h2>
+                <p>Booking is simple with our range of payment options including Google Pay, Apple Pay, cash, credit,
+                    debit,
+                    and Venmo. Choose the method that works best for you and enjoy a smooth transaction.</p>
+            </div>
+            <div class="right-content">
+                <h2>Rental Options for Every Adventure</h2>
+                <h3>Honda Motor Scooters:</h3>
+                <p>Choose from our range of scooters for solo or two-person rides, perfect for exploring the island.</p>
+                <h3>Side-by-Side ATVs:</h3>
+                <p>Great for adventurous groups, our ATVs are built for rugged trails and exciting off-road experiences.
+                </p>
+                <h3>Jeeps:</h3>
+                <p>Enjoy a comfortable drive with our versatile Jeeps, available in both enclosed and open-air options.
+                </p>
+            </div>
             <div id="weather">
                 <h2>Weather in Cozumel</h2>
                 <div id="title-icon">
