Added image to reservations page

--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -24,6 +24,7 @@
         </nav>
     </header>
     <main id="rentals">
+        <h1>Rental Prices</h1>
         <table>
             <caption>Table 1: Prices with a Reservation</caption>
             <thead>
