--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -38,6 +38,7 @@
             <li>Payment via Google Pay, Apple Pay, cash, credit card, debit card, or venmo.</li>
             <li>Rentals may be returned to either physical location.</li>
         </ul>
+        <img src="images/blue-scooter.webp" alt="Blue scooter in Cozumel">
         <form id="reserve" method="get" action="thank-you.html">
             <fieldset id="user-info">
                 <legend>Personal Info</legend>
