--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -20,12 +20,12 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="rentals.html">Rentals</a>
-            <a href="#">Reservations</a>
+            <a href="#" class="active">Reservations</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
     <main id="reservations">
-        <h2>Rental Services and Agreements</h2>
+        <h1>Rental Services and Agreements</h1>
         <ul>
             <li>A $50 security deposit is required to confirm reservations.</li>
             <li>A valid drivers license is required in hand at the time of rental.</li>
@@ -64,7 +64,7 @@
                 <label for="rental-type">Rental Type</label>
                 <input type="text" id="rental-type" name="rental-type" required>
                 <label for="cruise-line">Cruise Line (If Applicable)</label>
-                <input type="text" id="cruise-line" name="cruise-line" required>
+                <input type="text" id="cruise-line" name="cruise-line">
                 <label>Additional Comments<br>
                     <textarea id="comments" name="comments"></textarea>
                 </label>
@@ -90,7 +90,7 @@
         <div class="site-details">
             <p class="current-year"></p>
             <p class="last-modified"></p>
-            <a src="attributions.html">Attributions</a>
+            <a href="attributions.html">Attributions</a>
         </div>
     </footer>
     <script src="scripts/responsive-menu.js"></script>
