--- a/scoots/thank-you.html
+++ b/scoots/thank-you.html
@@ -24,8 +24,8 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <main>
-        <h2>Thank You for Your Submission!</h2>
+    <main id="thank-you">
+        <h1>Thank You for Your Submission!</h1>
         <p>
             We appreciate you reaching out to Scoots. Whether you’ve just sent us a reservation request or contacted us
             with a question, we want you to know that we’ve received your message and are reviewing it.
@@ -53,7 +53,7 @@
         <div class="site-details">
             <p class="current-year"></p>
             <p class="last-modified"></p>
-            <a src="attributions.html">Attributions</a>
+            <a href="attributions.html">Attributions</a>
         </div>
     </footer>
     <script src="scripts/responsive-menu.js"></script>
