--- a/scoots/attributions.html
+++ b/scoots/attributions.html
@@ -45,7 +45,7 @@
         <div class="site-details">
             <p class="current-year"></p>
             <p class="last-modified"></p>
-            <a src="attributions.html">Attributions</a>
+            <a href="attributions.html">Attributions</a>
         </div>
     </footer>
     <script src="scripts/responsive-menu.js"></script>
