--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -20,30 +20,36 @@
             <a href="index.html">Home</a>
             <a href="rentals.html">Rentals</a>
             <a href="reservations.html">Reservations</a>
-            <a href="#">Contact</a>
+            <a href="#" class="active">Contact</a>
         </nav>
     </header>
     <main id="contact">
+        <h1>Contact Us</h1>
         <form id="contact-us" method="get" action="thank-you.html">
-            <fieldset id="user-info">
+            <fieldset>
                 <legend>Contact Us</legend>
                 <label for="name">Name</label>
                 <input type="text" id="fname" name="fname" required>
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="youremail@gmail.com" required><br>
                 <label>Comment<br>
-                    <textarea id="comments" name="comments"></textarea>
+                    <textarea id="comments" name="comments" required></textarea>
                 </label>
             </fieldset>
+            <label><button type="submit" id="send-message">Send Message</button></label>
         </form>
-        <p>If you'd rather reach out to us directly, you can use one of the following option:</p>
-        <ul>
-            <li>Call us at (987)123-4567</li>
-            <li>Email us at info@scootsrentals.com</li>
+        <div id="contact-right">
+            <p>If you'd rather reach out to us directly, you can use one of the following options:</p>
+            <ul>
+                <li>Call us at (987)123-4567</li>
+                <li>Email us at info@scootsrentals.com</li>
+            </ul>
             <p>or come visit us at one of our two locations:</p>
-            <li>123 Scooter Lane, Playa del Carmen, Q.R., Mexico</li>
-            <li>456 Scooter Road, Cozumel, Q.R., Mexico</li>
-        </ul>
+            <ul>
+                <li>123 Scooter Lane, Playa del Carmen, Q.R., Mexico</li>
+                <li>456 Scooter Road, Cozumel, Q.R., Mexico</li>
+            </ul>
+        </div>
         <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1jl9UyfL8sdaZMs_RCvB67tklcVspvjc&ehbc=2E312F"
             width="640" height="480" loading="lazy"></iframe>
     </main>
@@ -65,7 +71,7 @@
         <div class="site-details">
             <p class="current-year"></p>
             <p class="last-modified"></p>
-            <a src="attributions.html">Attributions</a>
+            <a href="attributions.html">Attributions</a>
         </div>
     </footer>
     <script src="scripts/responsive-menu.js"></script>
