--- a/scoots/index.html
+++ b/scoots/index.html
@@ -21,7 +21,7 @@
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
         <button class="menu" aria-label="Menu"></button>
         <nav>
-            <a href="#">Home</a>
+            <a href="#" class="active">Home</a>
             <a href="rentals.html">Rentals</a>
             <a href="reservations.html">Reservations</a>
             <a href="contact.html">Contact</a>
@@ -98,7 +98,7 @@
         <div class="site-details">
             <p class="current-year"></p>
             <p class="last-modified"></p>
-            <a src="attributions.html">Attributions</a>
+            <a href="attributions.html">Attributions</a>
         </div>
     </footer>
     <script src="scripts/responsive-menu.js"></script>
