--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -18,7 +18,7 @@
         <button class="menu" aria-label="Menu"></button>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Rentals</a>
+            <a href="#" class="active">Rentals</a>
             <a href="reservations.html">Reservations</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -74,7 +74,7 @@
         <div class="site-details">
             <p class="current-year"></p>
             <p class="last-modified"></p>
-            <a src="attributions.html">Attributions</a>
+            <a href="attributions.html">Attributions</a>
         </div>
     </footer>
     <script src="scripts/responsive-menu.js"></script>
