--- a/scoots/attributions.html
+++ b/scoots/attributions.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Scoots Attributions Page</title>
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
@@ -25,7 +25,23 @@
         </nav>
     </header>
     <main>
-
+        <h1>Attributions</h1>
+        <h2>Social Media Icons</h2>
+        <ul>
+            <li>flaticon.com</li>
+        </ul>
+        <h2>Images</h2>
+        <ul>
+            <li>Google Images</li>
+        </ul>
+        <h2>Help with Content</h2>
+        <ul>
+            <li>ChatGPT</li>
+        </ul>
+        <h2>Logo</h2>
+        <ul>
+            <li>Canva</li>
+        </ul>
     </main>
     <footer>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
