Added new favicon

--- a/scoots/attributions.html
+++ b/scoots/attributions.html
@@ -42,6 +42,14 @@
         <ul>
             <li>Canva</li>
         </ul>
+        <h2>Favicon</h2>
+        <ul>
+            <li>favicongenerator.com</li>
+        </ul>
+        <h2>Additional Resource</h2>
+        <ul>
+            <li>w3schools.com</li>
+        </ul>
     </main>
     <footer>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
