Added meta name and author to each page

--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scoots Rentals Page</title>
+    <meta name="description" content="This is the rentals page for the Scoots website. 
+    It provides rental details for each type of scooter available.">
+    <meta name="author" content="Jennifer Weber">
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
