--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scoots Reservations Page</title>
+    <meta name="description" content="This is the reservations page for the Scoots website. 
+    It provides a form with which the user can request a scooter as well as the rental agreements.">
+    <meta name="author" content="Jennifer Weber">
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
