--- a/scoots/attributions.html
+++ b/scoots/attributions.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scoots Attributions Page</title>
+    <meta name="description"
+        content="Attributions page for the Scoots website. This lists all resources used to create the site. ">
+    <meta name="author" content="Jennifer Weber">
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
@@ -24,7 +27,7 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <main>
+    <main id="attributions">
         <h1>Attributions</h1>
         <h2>Social Media Icons</h2>
         <ul>
