--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scoots Contact Us Page</title>
+    <meta name="description" content="This is the contact us page for the Scoots website. It provides 
+    contact information as well as a form with which the user can send a message to the company.">
+    <meta name="author" content="Jennifer Weber">
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
