--- a/scoots/index.html
+++ b/scoots/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scoots Home Page</title>
+    <meta name="description" content="This is the home page for the Scoots website. 
+    It provides geeneral information about the company.">
+    <meta name="author" content="Jennifer Weber">
 
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
