--- a/scoots/thank-you.html
+++ b/scoots/thank-you.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scoots Thank You Page</title>
+    <meta name="description" content="This is the thank you page for the Scoots website. 
+        It merely thanks the user for a successful form submission from either the reservation or contact page.">
+    <meta name="author" content="Jennifer Weber">
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
