Fixed html errors

--- a/scoots/index.html
+++ b/scoots/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <div id="banner">
-        <h3 id="max-temp"></h3>
+        <h3 id="max-temp">Today's high temperature is not available.</h3>
         <button id="bannerButton">✖</button>
     </div>
     <header>
@@ -76,7 +76,7 @@
                 <h2>Weather in Cozumel</h2>
                 <div id="title-icon">
                     <p id="weather-main"></p>
-                    <img id="weather-icon">
+                    <img id="weather-icon" src="images/favicon.co" alt="Weather Icon">
                 </div>
                 <p id="temp-desc"></p>
                 <p id="humidity"></p>
