--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -32,7 +32,7 @@
             <fieldset>
                 <legend>Contact Us</legend>
                 <label for="name">Name</label>
-                <input type="text" id="fname" name="fname" required>
+                <input type="text" id="name" name="name" required>
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="youremail@gmail.com" required><br>
                 <label>Comment<br>
