Added favicon to all pages

--- a/scoots/attributions.html
+++ b/scoots/attributions.html
@@ -9,6 +9,7 @@
         content="Attributions page for the Scoots website. This lists all resources used to create the site. ">
     <meta name="author" content="Jennifer Weber">
 
+    <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
