--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -9,6 +9,7 @@
     It provides rental details for each type of scooter available.">
     <meta name="author" content="Jennifer Weber">
 
+    <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
