--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -9,6 +9,7 @@
     It provides a form with which the user can request a scooter as well as the rental agreements.">
     <meta name="author" content="Jennifer Weber">
 
+    <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
