--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -9,6 +9,7 @@
     contact information as well as a form with which the user can send a message to the company.">
     <meta name="author" content="Jennifer Weber">
 
+    <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
