--- a/scoots/thank-you.html
+++ b/scoots/thank-you.html
@@ -9,6 +9,7 @@
         It merely thanks the user for a successful form submission from either the reservation or contact page.">
     <meta name="author" content="Jennifer Weber">
 
+    <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
