--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -68,7 +68,7 @@
                 <input type="text" id="rental-type" name="rental-type" required>
                 <label for="cruise-line">Cruise Line (If Applicable)</label>
                 <input type="text" id="cruise-line" name="cruise-line">
-                <label>Additional Comments<br>
+                <label for="comments">Additional Comments<br>
                     <textarea id="comments" name="comments"></textarea>
                 </label>
             </fieldset>
