--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -36,7 +36,7 @@
                 <input type="text" id="name" name="name" required>
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="youremail@gmail.com" required><br>
-                <label>Comment<br>
+                <label for="comments">Comment<br>
                     <textarea id="comments" name="comments" required></textarea>
                 </label>
             </fieldset>
