--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -36,11 +36,11 @@
                 <input type="text" id="name" name="name" required>
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="youremail@gmail.com" required><br>
-                <label for="comments">Comment<br>
-                    <textarea id="comments" name="comments" required></textarea>
+                <label for="comment">Comment<br>
+                    <textarea id="comment" name="comment" required></textarea>
                 </label>
             </fieldset>
-            <label><button type="submit" id="send-message">Send Message</button></label>
+            <button type="submit" name="send-message" id="send-message">Send Message</button>
         </form>
         <div id="contact-right">
             <p>If you'd rather reach out to us directly, you can use one of the following options:</p>
