--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -36,9 +36,8 @@
                 <input type="text" id="name" name="name" required>
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="youremail@gmail.com" required><br>
-                <label for="comment">Comment<br>
-                    <textarea id="comment" name="comment" required></textarea>
-                </label>
+                <label for="comment">Comment</label>
+                <textarea id="comment" name="comment" required></textarea><br>
             </fieldset>
             <button type="submit" name="send-message" id="send-message">Send Message</button>
         </form>
